@@ -58,8 +58,7 @@ library(oce)
 data(a03)
 GS <- subset(a03, 109<=stationId&stationId<=129)
 GSg <- sectionGrid(GS, p=seq(0, 5000, 100))
-data(coastlineWorld)
-plot(GSg, coastline=coastlineWorld, map.xlim=c(-80,-60))
+plot(GSg, map.xlim=c(-80,-60))
 }
 
 \author{Dan Kelley}
